; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/soc/davinci/extr_davinci-pcm.c_davinci_pcm_prepare.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/soc/davinci/extr_davinci-pcm.c_davinci_pcm_prepare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_pcm_substream = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.davinci_runtime_data* }
%struct.davinci_runtime_data = type { i32, i32, i64 }
%struct.edmacc_param = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_pcm_substream*)* @davinci_pcm_prepare to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @davinci_pcm_prepare(%struct.snd_pcm_substream* %0) #0 {
  %2 = alloca %struct.snd_pcm_substream*, align 8
  %3 = alloca %struct.davinci_runtime_data*, align 8
  %4 = alloca %struct.edmacc_param, align 4
  store %struct.snd_pcm_substream* %0, %struct.snd_pcm_substream** %2, align 8
  %5 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %2, align 8
  %6 = getelementptr inbounds %struct.snd_pcm_substream, %struct.snd_pcm_substream* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load %struct.davinci_runtime_data*, %struct.davinci_runtime_data** %8, align 8
  store %struct.davinci_runtime_data* %9, %struct.davinci_runtime_data** %3, align 8
  %10 = load %struct.davinci_runtime_data*, %struct.davinci_runtime_data** %3, align 8
  %11 = getelementptr inbounds %struct.davinci_runtime_data, %struct.davinci_runtime_data* %10, i32 0, i32 2
  store i64 0, i64* %11, align 8
  %12 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %2, align 8
  %13 = call i32 @davinci_pcm_enqueue_dma(%struct.snd_pcm_substream* %12)
  %14 = load %struct.davinci_runtime_data*, %struct.davinci_runtime_data** %3, align 8
  %15 = getelementptr inbounds %struct.davinci_runtime_data, %struct.davinci_runtime_data* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @edma_read_slot(i32 %16, %struct.edmacc_param* %4)
  %18 = load %struct.davinci_runtime_data*, %struct.davinci_runtime_data** %3, align 8
  %19 = getelementptr inbounds %struct.davinci_runtime_data, %struct.davinci_runtime_data* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = call i32 @edma_write_slot(i32 %20, %struct.edmacc_param* %4)
  %22 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %2, align 8
  %23 = call i32 @davinci_pcm_enqueue_dma(%struct.snd_pcm_substream* %22)
  ret i32 0
}

declare dso_local i32 @davinci_pcm_enqueue_dma(%struct.snd_pcm_substream*) #1

declare dso_local i32 @edma_read_slot(i32, %struct.edmacc_param*) #1

declare dso_local i32 @edma_write_slot(i32, %struct.edmacc_param*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
